# LeagueOfLegendsBot

./: .gitignore  README.md  app.py  pyproject.toml
data_handler/: api_client.py  data_handler.py  summoner_class.py
excel/: LeagueOfLegendsData.xlsx
lolbot/templates/: index.html
src/: api_client.py  data_handler.py  main.py  summoner_class.py  test.py
src/testing/: match_metadata_df.csv  matches_df.csv  summoners_data.csv
templates/: index.html
